WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260325
[IFC] Content with "line-break: after-white-space" is not eligible for intrinsic width content caching
https://bugs.webkit.org/show_bug.cgi?id=260325
Summary
[IFC] Content with "line-break: after-white-space" is not eligible for intrin...
zalan
Reported
2023-08-16 19:43:59 PDT
ssia
Attachments
[fast-cq]Patch
(3.90 KB, patch)
2023-08-16 19:52 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2023-08-16 19:52:17 PDT
Created
attachment 467303
[details]
[fast-cq]Patch
EWS
Comment 2
2023-08-16 21:13:33 PDT
Committed
266983@main
(4cf03770e957): <
https://commits.webkit.org/266983@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467303
[details]
.
Radar WebKit Bug Importer
Comment 3
2023-08-16 21:14:13 PDT
<
rdar://problem/114005832
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug