[IFC] Content with "line-break: after-white-space" is not eligible for intrinsic width content caching https://bugs.webkit.org/show_bug.cgi?id=260325

Reviewed by Antti Koivisto.

Intrinsic width mode produces slightly different trailing (hanging) whitespace.

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::computedIntrinsicSizes):
* Source/WebCore/layout/formattingContexts/inline/TextOnlySimpleLineBuilder.cpp:
(WebCore::Layout::TextOnlySimpleLineBuilder::hasIntrinsicWidthSpecificStyle):
* Source/WebCore/layout/formattingContexts/inline/TextOnlySimpleLineBuilder.h:

Canonical link: https://commits.webkit.org/266983@main