Source/WebCore/layout/formattingContexts/inline/TextOnlySimpleLineBuilder.h
@@ -43,6 +43,7 @@ public:
     LineLayoutResult layoutInlineContent(const LineInput&, const std::optional<PreviousLine>&) final;
 
     static bool isEligibleForSimplifiedTextOnlyInlineLayout(const ElementBox& root, const InlineFormattingState&, const FloatingState* = nullptr);
+    static bool hasIntrinsicWidthSpecificStyle(const RenderStyle& rootStyle);
 
 private:
     InlineItemPosition placeInlineTextContent(const InlineItemRange&);
